Change db, and connect to new db

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 # Database Configuration
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=digital_gemba
+DB_HOST=aradenta.com
+DB_USER=aradenta_genba_external
+DB_PASSWORD=yournameonit
+DB_NAME=aradenta_genba_digital
 DB_PORT=3306
 
 # Gemini API Configuration
